# code-agent-sdk-rust

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SDLC.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: API_REFERENCE.md  README.md  autoresearch.md  cli-control.md  configuration.md  error-handling.md  event-streaming.md  examples.md  getting-started.md  permissions.md  plan-mode.md  sdlc-workflows.md  startup-performance.md
examples/: 01-hello-agent.rs  02-streaming-query.rs  03-code-reviewer.rs  04-bash-command.rs  05-file-editor.rs  06-prompt-skills.rs  07-direct-skills.rs  08-memory-management.rs  10-multi-tool-reasoning.rs  13-permissions.rs  20-sdlc-discovery-plan.rs  21-sdlc-gated-implementation.rs  22-sdlc-release-readiness.rs  23-system-prompts.rs  24-high-level-agent.rs  25-structured-json.rs  26-runtime-error-to-pr.rs  26-runtime-error-to-pr_advanced.rs  27-autoresearch-ledger.rs  basic-agent.rs  basic-usage.rs  loop-strategies.rs  permission-handling.rs  sdk-control-features.rs  streaming.rs
examples/common/: mod.rs
src/: agent.rs  automode.rs  autoresearch.rs  browser_handoff.rs  command.rs  config.rs  conversation.rs  current_cli.rs  discovery.rs  error.rs  event.rs  goal.rs  json_output.rs  lib.rs  transport.rs
tests/: autoresearch.rs  cli_control.rs  current_cli_features.rs  discovery.rs  feature_parity.rs
