[package]
name = "autohand-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for controlling Autohand code agents through the CLI JSON-RPC mode."
license = "Apache-2.0"
repository = "https://github.com/autohandai/code-agent-sdk-rust"
homepage = "https://autohand.ai/sdk/"
keywords = ["autohand", "agent", "sdk", "json-rpc", "cli-wrapper"]
categories = ["api-bindings", "development-tools"]

[lib]
name = "autohand_sdk"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tempfile = "3.12"

